--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 			  <a href="https://t.me/biyar007" target="_blank"> <button class="neo-button"><i class="bi bi-optical-audio"></i></button> </a>
 
-			  <a href="https://github.com/muhamadsurchiy" target="_blank"> <button class="neo-button"><i class="bi bi-github"></i></button> </a>
+			  <a href="https://github.com/BiyarHussein" target="_blank"> <button class="neo-button"><i class="bi bi-github"></i></button> </a>
               
 			  
 			 <div class="profile mt-5">
