--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
     <!-- Google Tag Manager -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RFYYZR3VX2"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-RFYYZR3VX2');
+    // Initialize visitor count
+    let visitorCount = localStorage.getItem('visitorCount') || 0;
+    visitorCount = parseInt(visitorCount) + 1; // Increment the count by 1
 
-        // Placeholder for visitor count logic
-        document.getElementById('visitor-count').textContent = 'Visitors: Coming Soon';
-    </script>
+    // Store the updated visitor count in localStorage
+    localStorage.setItem('visitorCount', visitorCount);
+
+    // Display the visitor count on the page
+    document.getElementById('visitor-count').textContent =  + visitorCount;
+</script>
 </body>
 </html>
